fix: remove mask on tablet and mobile

--- a/assets/sass/elements/_videos.scss
+++ b/assets/sass/elements/_videos.scss
@@ -103,6 +103,12 @@
           opacity: 100%;
         }
       }
+
+      @media screen and (max-width: 991px) {
+        &::before {
+          display: none;
+        }
+      }
     }
 
     h3 {
